# configs

./: .bashrc  .condarc  .gitignore  .isort.cfg  .marked-files  .vimrc  .vimrc-old  .zshenv  .zshrc  .zshrc-ecs  .zshrc-linux  .zshrc-mac  .zshrc.bak  CLAUDE.md  FINDINGS.md  README.md  SYNC.md  ZSH.md  aliases.zsh  aws-credentials-load.sh  check_status.py  configs.code-workspace  copilot-hack.sh  csync.py  csync_alias.sh  direnvrc  functions.zsh  joe-custom-bira.zsh-theme  joe-custom.zsh-theme  keybindings-20230329.jsonc  keybindings.json  main.tf  playbook.yaml  settings.json  setup_plugins.sh  startup.sh  sync.sh  test_file.py  ys.zsh-theme  zshrc
.github/workflows/: test-csync.yml
csync/: .gitignore  CLAUDE.md  GITIGNORE_PROTECTION.md  README.md  pyproject.toml  run_tests.sh
csync/.claude/: settings.local.json
csync/src/csync/: __init__.py  addons.py  backup.py  cli.py  config.py  marked.py  status.py  symlinks.py  sync.py
csync/tests/: __init__.py  test_gitignore_compliance.py
k9s/: config.yaml
modules/: kinesis.tf
zsh_custom/: custom_git_prompt_patch.zsh  my_patches.zsh
zsh_custom/completions/: _eksctl_anywhere
zsh_custom/plugins/autoswitch_virtualenv/: autoswitch_virtualenv.plugin.zsh
zsh_custom/themes/: custom-bira.zsh-theme
